--- a/index.html
+++ b/index.html
@@ -194,31 +194,31 @@
 		</div>
 		<div class = "grid-container" id = "gridid">
 			<div class="grid-item" onclick="slcake(1)">
-				<img class="imggrid" src="img/1-small.jpg">
-			</div>
-			<div class="grid-item" onclick="slcake(11)">
-				<img class="imggrid" src="img/11-small.jpg">
-			</div>
-			<div class="grid-item" onclick="slcake(7)">
-				<img class="imggrid" src="img/7-small.jpg">
-			</div>
-			<div class="grid-item" onclick="slcake(17)">
-				<img class="imggrid" src="img/17-small.jpg">
-			</div>
-			<div class="grid-item" onclick="slcake(8)">
-				<img class="imggrid" src="img/8-small.jpg">
+				<img class="imggrid" src="img/1.jpg">
 			</div>
 			<div class="grid-item" onclick="slcake(2)">
-				<img class="imggrid" src="img/2-small.jpg">
+				<img class="imggrid" src="img/2.jpg">
 			</div>
-			<div class="grid-item" onclick="slcake(15)">
-				<img class="imggrid" src="img/15-small.jpg">
+			<div class="grid-item" onclick="slcake(3)">
+				<img class="imggrid" src="img/3.jpg">
+			</div>
+			<div class="grid-item" onclick="slcake(4)">
+				<img class="imggrid" src="img/4.jpg">
+			</div>
+			<div class="grid-item" onclick="slcake(5)">
+				<img class="imggrid" src="img/5.jpg">
 			</div>
 			<div class="grid-item" onclick="slcake(6)">
-				<img class="imggrid" src="img/6-small.jpg">
+				<img class="imggrid" src="img/6.jpg">
 			</div>
-			<div class="grid-item" onclick="slcake(19)">
-				<img class="imggrid" src="img/19-small.jpg">
+			<div class="grid-item" onclick="slcake(7)">
+				<img class="imggrid" src="img/7.jpg">
+			</div>
+			<div class="grid-item" onclick="slcake(8)">
+				<img class="imggrid" src="img/8.jpg">
+			</div>
+			<div class="grid-item" onclick="slcake(9)">
+				<img class="imggrid" src="img/9.jpg">
 			</div>
 		</div>
 	</div>
@@ -253,7 +253,7 @@
 			function slcake (idcake) {
 				gridd.style.display = 'none';
 				mainn.style.display = "block";
-				imgtmp.src = 'img/'+idcake+'-small.jpg';
+				imgtmp.src = 'img/'+idcake+'.jpg';
 				mainn.appendChild(imgtmp);
 				btn2.scrollIntoView();
 			}
