--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-<link rel="stylesheet" type="text/css" href="style.css">
+<link rel="stylesheet" type="text/css" href="css/style.css">
 <body>
 	<div id="balloon-container"></div>
 	<div id="howtouseContainer">
@@ -40,6 +40,6 @@
 			</button>
 		</div>
 	</div>
-<script type="text/javascript" src="script.js"></script>	
+<script type="text/javascript" src="js/script.js"></script>	
 </body>
 </html>
