--- a/index.html
+++ b/index.html
@@ -1,52 +1,51 @@
 <html>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-<link rel="stylesheet" type="text/css" href="css/style.css">
-<body>
-	<div id="balloon-container"></div>
-	<div id="howtouseContainer">
-		<div id="howtouse">
-			<a id="txtTittleHTU" class="txtHowtouse"> HOW TO USE </a><br>
-			<a id="txtContentHTU" class="txtHowtouse"> With this website, we will organize an online birthday party for you.<br>
-				We provide cake, candles according to your age, sing a birthday song,<br>
-				and record your wishes in the Wish Gallery.<br>
-				To begin this celebration, simply input your name and your age in the fields above,<br>
-				then click the "START THE PARTY" button. </a><br>
-			<button id="btnClsHowtouse" class="btnCake" onclick="clsHowtouse()"> CLOSE </button>
-		</div>
-	</div>
-	<div id="container">
-		<h1 id="txtBirthday"> Birthday </h1>
-		<h1 id="txtOnline"> ONLINE </h1>
-		<a id="credit"> a project by cnmeow </a>
-		<div id="age">
-			<a id="txtIm" class="txtimyearsold"> My name's </a>
-			<input type="text" id="inpName" min="1" max="99" placeholder="CamNguyen" required autofocus>
-			<a id="txtIm" class="txtimyearsold">. Today, I'm </a><br>
-			<input type="number" id="inpYears" min="1" max="99" placeholder="19" required autofocus>
-		</div>
-		<div id="topCake" class="cakeContainer">
-			<div id="candleContainer">
-				<div id="candle">
-					<div id="light"></div>
-				</div>
-			</div>
-			<button id="pinkCake" class="btnCake" onclick="openHowtouse()">
-				<a class="txtBtnCake"> How to use </a>
-			</button>
-		</div>
-		<div id="botCake" class="cakeContainer">
-			<button id="orangeCake" class="btnCake" onclick="openWishGallery()">
-				<a class="txtBtnCake"> Wish Gallery </a>
-			</button>
-		</div>
-		<div id="botCake" class="cakeContainer">
-			<div id="starsContainer"></div>
-			<button id="redCake" class="btnCake" onclick="appendStars()">
-				<a class="txtBtnCake"> START THE PARTY </a>
-			</button>
-		</div>
-	</div>
-<script type="text/javascript" src="js/script.js"></script>	
-</body>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <body>
+    <div id="balloon-container"></div>
+    <div id="howtouseContainer">
+      <div id="howtouse">
+        <a id="txtTittleHTU" class="txtHowtouse"> HOW TO USE </a>
+        <br>
+        <a id="txtContentHTU" class="txtHowtouse"> With this website, we will organize an online birthday party for you. <br> We provide cake, candles according to your age, sing a birthday song, <br> and record your wishes in the Wish Gallery. <br> To begin this celebration, simply input your name and your age in the fields above, <br> then click the "START THE PARTY" button. </a>
+        <br>
+        <button id="btnClsHowtouse" class="btnCake" onclick="clsHowtouse()"> CLOSE </button>
+      </div>
+    </div>
+    <div id="container">
+      <h1 id="txtBirthday"> Birthday </h1>
+      <h1 id="txtOnline"> ONLINE </h1>
+      <a id="credit"> a project by cnmeow </a>
+      <div id="age">
+        <a id="txtIm" class="txtimyearsold"> My name's </a>
+        <input type="text" id="inpName" min="1" max="99" placeholder="CamNguyen" required autofocus>
+        <a id="txtIm" class="txtimyearsold">. Today, I'm </a>
+        <br>
+        <input type="number" id="inpYears" min="1" max="99" placeholder="19" required autofocus>
+      </div>
+      <div id="topCake" class="cakeContainer">
+        <div id="candleContainer">
+          <div id="candle">
+            <div id="light"></div>
+          </div>
+        </div>
+        <button id="pinkCake" class="btnCake" onclick="openHowtouse()">
+          <a class="txtBtnCake"> How to use </a>
+        </button>
+      </div>
+      <div id="botCake" class="cakeContainer">
+        <button id="orangeCake" class="btnCake" onclick="openWishGallery()">
+          <a class="txtBtnCake"> Wish Gallery </a>
+        </button>
+      </div>
+      <div id="botCake" class="cakeContainer">
+        <div id="starsContainer"></div>
+        <button id="redCake" class="btnCake" onclick="appendStars()">
+          <a class="txtBtnCake"> START THE PARTY </a>
+        </button>
+      </div>
+    </div>
+    <script type="text/javascript" src="js/script.js"></script>
+  </body>
 </html>
